methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    forward();
           ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getCouleurSol()==Color.green){
  ^