methods.slug.SlugTracking.scala.code
forward();
def isFacingTrail():Boolean = {
  if (getCouleurSol()==Color.green){
    forward();
	}
}